# multi-make

cmake/cat1/: CMakeLists.txt
cmake/cat2/: CMakeLists.txt
makef/cat3/: Makefile
makef/cat4/: Makefile
makef/cat5/: Makefile
makef/cat6/: Makefile
makef/cat7/: Makefile
